# PDFOff

./: .gitignore  CLAUDE.md  PDFOff-Roadmap.md  README.md  package-lock.json  package.json
.cargo/: config.toml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: annotations.rs  document.rs  error.rs  forms.rs  lib.rs  main.rs  navigator.rs  page_editor.rs  printer.rs  renderer.rs
src/js/: annotation-tools.js  app.js  form-overlay.js  page-manager.js  sidebar.js  statusbar.js  toolbar.js  viewer.js
src/styles/: main.css
